# catask

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/catask/: __main__.py  atom_utils.py  config.py
tests/: test_atom_utils.py
