[project]
name = "catask_SiliconScientist"
version = "0.0.1"
authors = [{ name = "Avery Hill", email = "ahill15@tulane.edu" }]
description = "Python library for calculating common tasks in computational catalysis, such as binding energies for adsorbates on surfaces."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/SiliconScientist/catask"
Issues = "https://github.com/SiliconScientist/catask/issues"
